# TECHFIX

./: .gitignore  15_EXAMPLE_ENTRIES_MANUAL_INPUT.txt  GENERATOR_README.md  README.md  export_all_test.xlsx  generate_mock_data.py  pyproject.toml  requirements.txt  settings.json  techfix.sqlite3
SampleSourceDocs/: 2025-12-02_Bank_71942_Bank_deposit.json  2025-12-02_Invoice_92487_Project_completion.json  2025-12-03_Other_22009_Other_transaction.json  2025-12-03_Other_22009_Other_transaction.txt  2025-12-04_Receipt_47133_Equipment_purchase.json  2025-12-05_Receipt_45493_Office_rent.json  2025-12-06_Payroll_96374_Employee_salaries.json  2025-12-10_Adjust_51740_Depreciation_adjustment.json  2025-12-10_Bank_35506_Fee_charged.json  2025-12-10_Bank_35506_Fee_charged.xlsx  2025-12-13_Invoice_58247_Client_services___December.docx  2025-12-13_Invoice_58247_Client_services___December.json  2025-12-15_Receipt_17891_Miscellaneous_expenses.json  2025-12-16_Invoice_61359_Consulting_services.docx  2025-12-16_Invoice_61359_Consulting_services.json  2025-12-16_Invoice_62208_Consulting_services.json  2025-12-16_Invoice_66914_Client_services___December.docx  2025-12-16_Invoice_66914_Client_services___December.json  2025-12-16_Receipt_34779_Maintenance_services.json  2025-12-17_Adjust_52117_Prepaid_adjustment.json  2025-12-17_Payroll_73977_Employee_salaries.json  2025-12-19_Payroll_85119_Employee_salaries.json  2025-12-23_Bank_13224_Fee_charged.json  2025-12-23_Bank_13224_Fee_charged.xls  2025-12-25_Invoice_14056_Consulting_services.json  2025-12-26_Adjust_37786_Depreciation_adjustment.json  (+3 more)
(+100 files in other folders)
